--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,14 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap core CSS -->
-    <link href="%PUBLIC_URL%/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
     <!-- Material Design Bootstrap -->
-    <link href="%PUBLIC_URL%/css/mdb.min.css" rel="stylesheet">
+    <link href="./css/mdb.min.css" rel="stylesheet">
     <!-- Customizer -->
     <!-- <link rel="stylesheet" href="https://mdbootstrap.com/live/_MDB/css/customizer.min.css"> -->
     <!-- Your custom styles (optional) -->
-    <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="./css/style.css" rel="stylesheet">
+    <link rel="manifest" href="./manifest.json" />
     <script>
         if ('serviceWorker' in navigator) {
           window.addEventListener('load', function() {
@@ -39,14 +39,15 @@
         You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+    <script src="./bundle.js"></script>
     <!-- JQuery -->
-    <script type="text/javascript" src="%PUBLIC_URL%/js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
     <!-- Bootstrap dropdown -->
-    <script type="text/javascript" src="%PUBLIC_URL%/js/popper.min.js"></script>
+    <script type="text/javascript" src="./js/popper.min.js"></script>
     <!-- Bootstrap core JavaScript -->
-    <script type="text/javascript" src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <!-- MDB core JavaScript -->
-    <script type="text/javascript" src="%PUBLIC_URL%/js/mdb.min.js"></script>
+    <script type="text/javascript" src="./js/mdb.min.js"></script>
     <!-- Customizer -->
     <!-- <script type="text/javascript" src="https://mdbootstrap.com/live/_MDB/js/customizer.min.js"></script> -->
     <!-- Custom -->
